# Victix

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  vcpkg.json
runtime/: imgui.ini
src/: App.cpp  App.h  Orbitron-Black.h  Orbitron-Regular.h  main.cpp
src/imgui/: imgui.h  imgui_draw.cpp
src/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
src/imgui/misc/freetype/: README.md  imgui_freetype.cpp
src/model/: Object.cpp  Object.h  PerlinNoise.cpp  PerlinNoise.h  SkiaDebugDraw.h  Terrain.cpp  Terrain.h  World.cpp  World.h  WorldPosition.h
src/objects/: Bomb.cpp  Bomb.h  Emplacement.cpp  Emplacement.h  Explosion.cpp  Explosion.h  Generic.cpp  Generic.h  MachineGun.cpp  MachineGun.h  Object.cpp  Object.h  Player.h  Types.h
src/ui/: CairoDebugDraw.h  Dosis-Bold.h  Interface.cpp  Interface.h  Minimap.cpp  Minimap.h  Shaders.h  Skia.cpp  Skia.h  dosis.h  michromo.h
